# MainPythons

./: .gitignore  README.md  SymLinkDone.bat  SymLinkDone.shexe  requirements_testing.txt  setup.cfg  setup.py
done/: Codes.py  File.py  Game.py  List.py  Math.py  Number.py  Solver.py  Stats.py  String.py  StringGenerators.py  StringSolver.py  Time.py  __init__.py  test.py
done/File/: __init__.py  directory.py  module.py  pretty.py  site.py  zip.py
done/Number/: __init__.py  accuracy.py  display.py  division.py  primes.py
done/String/: Codes.py  Generators.py  Solver.py  __init__.py  printing.py
done/String/Solver/: __init__.py  chemistry.py  codewords.py  connect.py
test/: test_Codes.py  test_File.py  test_Game.py  test_List.py  test_Math.py  test_Number.py  test_Solver.py  test_Stats.py  test_String.py  test_StringCodes.py  test_StringSolver.py  test_Time.py
