[metadata]
name = done
description = filled with python functions that have been helpful to me over the years
author = Daniel Vargas
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir =
    =done
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
